# bash.org-like

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.local.json
.claude/skills/docs-sync/: SKILL.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
BashOrgLike/: context_processors.py  settings.py  urls.py  wsgi.py
icons/: manifest.json
quotes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_alter_quote_acceptant_alter_quote_created_date_and_more.py  0003_alter_quote_options.py  0004_alter_quote_status.py  0005_alter_quote_status.py
quotes/templates/quotes/: base.html  login_form.html  paginator.html  quote_add.html  quote_added.html  quotes_list.html  quotes_manage.html  quotes_view.html  welcome.html
quotes/templatetags/: quote_extras.py
