[project]
name = "bash-org-like"
version = "1.0.0"
description = "A bash.org-like quote database built with Django"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.4",
    "gunicorn==25.3.0",
    "whitenoise==6.12.0",
    "dj-database-url==3.1.2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]==3.3.3"]
mysql = ["mysqlclient==2.2.8"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-cov>=6.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "BashOrgLike.settings"
pythonpath = ["."]
testpaths = ["quotes"]
python_files = ["tests.py", "test_*.py"]
addopts = "--cov=quotes --cov=BashOrgLike --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]
